--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@ body{
     background-attachment:fixed ;
     background-size: cover;
 }
+footer {
+    background: rgb(124, 154, 167);
+    min-height: 100px;
+  }
+  footer p {
+    color: black;
+    text-align: center;
+  }
 table{
     width: 80%;
     margin: 40px auto;
