--- a/style.css
+++ b/style.css
@@ -8,11 +8,15 @@ body{
     padding: 0;
 }
 header{
-    background-color: #f2f2f2;
+    background-color:#eee;
+    text-align: center;
+    margin: 0px;
+    padding: 0.5rem;
+    border-color: black;
 }
 header h1{
     margin: 0px;
-    padding: 1em;
+    padding: 1rem;
     text-align: center;
 }
 footer {
