--- a/style.css
+++ b/style.css
@@ -1,18 +1,16 @@
 body{
-    background-image: url('fondo.jpg');
-    background-repeat: no-repeat;
-    background-attachment:fixed ;
-    background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
 }
 header{
-    background-color:#eee;
-    text-align: center;
+    background-color: #007bff;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 0px;
     padding: 0.5rem;
-    border-color: black;
 }
 header h1{
     margin: 0px;
@@ -20,19 +18,17 @@ header h1{
     text-align: center;
 }
 footer {
-    background: #f2f2f2;
-    text-align: center;
-    padding: 1em;
+    background-color: #007bff;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 0.5rem;
+    align-items: center;
 }
-footer p {
-    color: black;
-    margin: 0px;
-    text-align: center;
-  }
-
 table{
     width: 80%;
-    margin: 40px auto;
+    border-collapse: collapse;
     background: rgb(124, 154, 167);
 }
 table.list{
@@ -114,7 +110,9 @@ form input[type="text"], form input[type="number"] {
 
 /* Estilos para los botones del formulario */
 .form.action--button {
-    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin-top: 1em;
     }
 
@@ -140,3 +138,75 @@ th {
             background-color: #f2f2f2;
             }
 
+
+/* Estilos para pantallas pequeñas */
+@media (max-width: 600px) {
+    /* Ocultar los iconos en pantallas pequeñas */
+    #iconos {
+        display: none;
+    }
+    /* Ajustar el tamaño de la fuente en pantallas pequeñas */
+    p {
+        font-size: 0.8rem;
+    }
+    /* Ocultar la tabla en pantallas pequeñas */
+    table {
+        display: none;
+    }
+    /* Estilos para el formulario */
+    form {
+        flex-wrap:wrap;
+        align-content: space-between;
+        width: 100%;
+    }
+    /* Estilos para los inputs del formulario */
+    form input {
+        width: 100%;
+        margin-bottom: 0.5rem;
+    }
+    /* Estilos para el boton de enviar */
+    form input[type="submit"]{
+        width: 49%;
+    }
+    /* Estilos para el boton de reset */
+    form input[type="reset"]{
+        width: 49%;
+    }
+}
+
+/* Estilos para pantallas medianas */
+@media (min-width: 600px) and (max-width: 900px) {
+    /* Ajustar el tamaño de la fuente en pantallas medianas */
+    p {
+        font-size: 1rem;
+    }
+    /* Estilos para el formulario */
+    form {
+        flex-wrap:wrap;
+        align-content: space-between;
+        width: 100%;
+    }
+    /* Estilos para los inputs del formulario */
+    form input {
+        width: 100%;
+        margin-bottom: 0.5rem;
+    }
+    /* Estilos para el boton de enviar */
+form input[type="submit"]{
+        width: auto;
+        }
+/* Estilos para el boton de reset */
+form input[type="reset"]{
+        width: auto;
+        }
+/* Estilos para la tabla */
+table {
+        width: 50%;
+        display: table;
+        }
+/* Estilos para los iconos */
+#iconos {
+        display: flex;
+        justify-content: flex-end;
+        }
+        }
